test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-work-management-service
spec:
  selector:
    app: core-work-management
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
