test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-work-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-work-management
  template:
    metadata:
      labels:
        app: core-work-management
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io.scheme: 'http'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: core-work-management
        imagePullPolicy: Always
        image: ghcr.io/eed-web-application/core-work-management:sha-61f1010
        envFrom:
        - configMapRef:
            name: env-config-map
        - secretRef:
            name: mongodb-secret
        - secretRef:
            name: application-secrets
        resources:
          limits:
            memory: 512Mi
            cpu: "250m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: gh-secret
