test/hazelcast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-service
spec:
  clusterIP: None
  selector:
    app: core-work-management
  ports:
    - name: hazelcast
      port: 5701
      targetPort: 5701
