test/ingress-app-token.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-work-management-apptoken-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    link.argocd.argoproj.io/external-link: https://accel-webapp-dev.slac.stanford.edu/api/cwm-apptoken
  labels:
    name: core-work-management-apptoken-ingress
    
spec:
  rules:
  - host: "accel-webapp-dev.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: /api/cwm-apptoken(/|$)(.*)
        backend:
          service:
            name: core-work-management-service
            port: 
              number: 80
